--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -4,6 +4,31 @@
   "PROFILE": "الملف الشخصي",
   "ADMIN": "لوحة التحكم",
   "LOGOUT": "تسجيل خروج",
+  "AUTH": {
+    "LOGIN": "تسجيل الدخول",
+    "REGISTER": "إنشاء حساب",
+    "USERNAME": "اسم المستخدم أو البريد",
+    "PASSWORD": "كلمة المرور",
+    "CONFIRM_PASSWORD": "تأكيد كلمة المرور",
+    "FORGOT_PASSWORD": "نسيت كلمة المرور؟",
+    "DONT_HAVE_ACCOUNT": "ليس لديك حساب؟",
+    "HAVE_ACCOUNT": "بالفعل لديك حساب؟",
+    "NOT_CONFIRMED": "الحساب ليس مفعل؟",
+    "CONFIRM": "قم بتفعيله الآن!",
+    "ERROR_MESSAGES": {
+      "NAME_REQUIRED": "{{type}} مطلوب",
+      "NAME_MIN_LENGTH": "{{type}} يجب أن يحتوي على 3 أحرف على الأقل",
+      "EMAIL_PATTERN": "عنوان البريد الإلكتروني غير صحيح. مثال: example@domain.com",
+      "REQUIRED": "هذا الحقل مطلوب"
+    }
+  },
+  "CONFIRMATION_FORM": {
+    "CONFIRM_EMAIL_TITLE": "تأكيد بريدك الإلكتروني",
+    "EMAIL_LABEL": "البريد الإلكتروني",
+    "TOKEN_LABEL": "رمز التحقق",
+    "CONFIRM_BUTTON": "تأكيد البريد الإلكتروني",
+    "RESEND_LINK": "إعادة إرسال بريد التأكيد"
+  },
   "ACTIONS": {
     "CANCEL": "إلغاء",
     "EDIT": "تعديل",
@@ -53,7 +78,13 @@
     "SETTINGS": "الإعدادات",
     "POSTS_HEADER": "منشورات المستخدم",
     "NO_POSTS": "لم يقم هذا المستخدم بمشاركة أي منشورات بعد.",
-    "ERROR_LOADING": "فشل في تحميل الملف الشخصي. يرجى إعادة المحاولة لاحقًا."
+    "ERROR_LOADING": "فشل في تحميل الملف الشخصي. يرجى إعادة المحاولة لاحقًا.",
+    "ROLES": {
+      "ADMIN": "مسؤول",
+      "WRITER": "كاتب",
+      "READER": "قارئ",
+      "SELECT": "اختر الصلاحية"
+    }
   },
   "DIALOG": {
     "CONFIRM_DELETE_POST_TITLE": "تأكيد حذف المنشور",
@@ -85,8 +116,56 @@
       "OLD_PASSWORD": "كلمة المرور القديمة",
       "NEW_PASSWORD": "كلمة المرور الجديدة",
       "CONFIRM_NEW_PASSWORD": "تأكيد كلمة المرور الجديدة",
-      "PASSWORD_MISMATCH": "كلمات المرور غير متطابقة.",
       "SUBMIT": "تغيير كلمة المرور"
+    }
+  },
+  "PASSWORD_ERRORS": {
+    "PASSWORD_MISMATCH": "كلمات المرور غير متطابقة.",
+    "REQUIRED": "كلمة المرور مطلوبة.",
+    "MIN_LENGTH": "يجب أن تكون كلمة المرور 8 أحرف على الأقل.",
+    "PATTERN": "يجب أن تحتوي كلمة المرور على حرف كبير واحد على الأقل، وحرف صغير واحد على الأقل، ورقم واحد، وحرف خاص واحد."
+  },
+  "DASHBOARD": {
+    "WELCOME": "مرحبًا",
+    "SUBTITLE": "هنا يمكنك إدارة المنصة",
+    "STATS": {
+      "USERS": "إجمالي المستخدمين",
+      "POSTS": "إجمالي المنشورات",
+      "COMMENTS": "إجمالي التعليقات"
+    },
+    "SECTIONS": {
+      "USERS": "المستخدمين",
+      "POSTS": "المنشورات",
+      "COMMENTS": "التعليقات",
+      "MANAGE": "إدارة {{type}}",
+      "TABLE_HEADERS": {
+        "FULL_NAME": "الاسم الكامل",
+        "FIRST_NAME": "الاسم الأول",
+        "LAST_NAME": "الاسم الأخير",
+        "USERNAME": "اسم المستخدم",
+        "EMAIL": "البريد الإلكتروني",
+        "ROLE": "الصلاحية",
+        "ACTIONS": "الإجراءات",
+        "CONTENT": "المحتوى",
+        "WRITER": "الناشر",
+        "DATE": "التاريخ",
+        "CREATED_AT": "تاريخ الإنشاء"
+      },
+      "NO_RESULTS": "لا توجد {{type}}.",
+      "LOAD_MORE": "عرض المزيد من {{type}}"
+    },
+    "SIDEBAR": {
+      "USERS": "إدارة المستخدمين",
+      "POSTS": "إدارة المنشورات",
+      "COMMENTS": "إدارة التعليقات",
+      "ADD_USER": "إضافة مستخدم"
+    },
+    "BUTTONS": {
+      "UPDATE_PROFILE": "تحديث الملف",
+      "CHANGE_ROLE": "تغيير الصلاحية",
+      "DELETE": "حذف",
+      "SAVE": "حفظ",
+      "CANCEL": "إلغاء"
     }
   }
 }
