--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -6,6 +6,7 @@
   "LOGOUT": "تسجيل خروج",
   "AUTH": {
     "LOGIN": "تسجيل الدخول",
+    "READER": "سجل معنا كقارئ",
     "REGISTER": "إنشاء حساب",
     "USERNAME": "اسم المستخدم أو البريد",
     "PASSWORD": "كلمة المرور",
