--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -6,6 +6,7 @@
   "LOGOUT": "Logout",
   "AUTH": {
     "LOGIN": "Login",
+    "READER": "Register As A Reader",
     "REGISTER": "Register",
     "USERNAME": "Username or Email",
     "PASSWORD": "Password",
