feat: Add post likes functionality with toggle and fetch capabilities, update UI for likes display

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -51,6 +51,7 @@
     "CREATED": "نشر في",
     "MODIFIED": "تم التعديل",
     "SUBMIT": "نشر",
+    "LIKES": "إعجاب",
     "CONTENT_ERRORS": {
       "MAXLENGTH": "المحتوى لا يمكن أن يتجاوز 5000 حرف.",
       "MINLENGTH": "المحتوى لا يمكن أن يكون أقل من 3 أحرف.",
