--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -51,6 +51,7 @@
     "CREATED": "Posted",
     "MODIFIED": "Modified",
     "SUBMIT": "Post",
+    "LIKES": "Likes",
     "CONTENT_ERRORS": {
       "MAXLENGTH": "Content cannot exceed 5000 characters.",
       "MINLENGTH": "Content cannot be Less Than 3 characters.",
