feat: Added share functionality for posts, enhanced UI with share button and translations, enhanced the profile and user profile component to display user feed that includes both user's original posts and shared posts from other users.

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -48,10 +48,12 @@
     "SHOW_COMMENTS": "عرض التعليقات",
     "HIDE_COMMENTS": "إخفاء التعليقات",
     "VIDEO_NOT_SUPPORTED": "متصفحك لا يدعم تشغيل الفيديو.",
-    "CREATED": "نشر في",
+    "CREATED": "نشر",
     "MODIFIED": "تم التعديل",
+    "SHARED": "تمت المشاركة في",
     "SUBMIT": "نشر",
-    "LIKES": "إعجاب",
+    "LIKES": "تسجيل إعجاب",
+    "SHARE": "مشاركة",
     "CONTENT_ERRORS": {
       "MAXLENGTH": "المحتوى لا يمكن أن يتجاوز 5000 حرف.",
       "MINLENGTH": "المحتوى لا يمكن أن يكون أقل من 3 أحرف.",
