feat: add notification service with SignalR integration, update UI for notifications in header, and enhance translation structure

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -1,9 +1,16 @@
 {
-  "HOME": "الرئيسية",
-  "SEARCH": "بحث",
-  "PROFILE": "الملف الشخصي",
-  "ADMIN": "لوحة التحكم",
-  "LOGOUT": "تسجيل خروج",
+  "HEADER": {
+    "HOME": "الرئيسية",
+    "SEARCH": "بحث",
+    "PROFILE": "الملف الشخصي",
+    "ADMIN": "لوحة التحكم",
+    "LOGOUT": "تسجيل خروج",
+    "NOTIFICATIONS": {
+      "TITLE": "الإشعارات",
+      "NO_CONTENT": "لا توجد إشعارات جديدة"
+    }
+  },
+
   "AUTH": {
     "LOGIN": "تسجيل الدخول",
     "READER": "سجل معنا كقارئ",
