feat: enhance reset password flow with loading states, improve token handling, and update UI elements for better user experience

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -35,7 +35,7 @@
     "EMAIL_LABEL": "البريد الإلكتروني",
     "TOKEN_LABEL": "رمز التحقق",
     "CONFIRM_BUTTON": "تأكيد البريد الإلكتروني",
-    "RESEND_LINK": "إعادة إرسال بريد التأكيد"
+    "RESEND_LINK": "إعادة إرسال رمز التحقق"
   },
   "ACTIONS": {
     "CANCEL": "إلغاء",
@@ -177,6 +177,17 @@
       "DELETE": "حذف",
       "SAVE": "حفظ",
       "CANCEL": "إلغاء"
+    }
+  },
+  "RESET_PASSWORD": {
+    "TITLE": "إعادة تعيين كلمة المرور",
+    "SUBMIT": "إعادة تعيين كلمة المرور",
+    "REQUEST": {
+      "TITLE": "طلب إعادة تعيين كلمة المرور",
+      "RESEND": "إعادة إرسال الرمز",
+      "SEND": "إرسال رمز التحقق",
+      "OTP": "رمز التحقق",
+      "VERIFY": "تحقق من رمز التحقق"
     }
   }
 }
